// Copyright 2020. The Tari Project
//
// Redistribution and use in source and binary forms, with or without modification, are permitted provided that the
// following conditions are met:
//
// 1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following
// disclaimer.
//
// 2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the
// following disclaimer in the documentation and/or other materials provided with the distribution.
//
// 3. Neither the name of the copyright holder nor the names of its contributors may be used to endorse or promote
// products derived from this software without specific prior written permission.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES,
// INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
// DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
// SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
// WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
// USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
syntax = "proto3";

package tari.rpc;

import "types.proto";

message SideChainFeatures {
    bytes contract_id = 1;
    ContractDefinition definition = 2;
    ContractConstitution constitution = 3;
    ContractAcceptance acceptance = 4;
    ContractUpdateProposal update_proposal = 5;
    ContractUpdateProposalAcceptance update_proposal_acceptance = 6;
    ContractAmendment amendment = 7;
    ContractCheckpoint checkpoint = 8;
    TemplateRegistration template_registration = 9;
}

message TemplateRegistration {
    bytes author_public_key = 1;
    Signature author_signature = 2;
    string template_name = 3;
    uint32 template_version = 4;
    TemplateType template_type = 5;
    BuildInfo build_info = 6;
    bytes binary_sha = 7;
    string binary_url = 8;
}

message TemplateType {
    oneof template_type {
        WasmInfo wasm = 1;
    }
}

message WasmInfo {
    uint32 abi_version = 1;
}

message BuildInfo {
    string repo_url = 1;
    bytes commit_hash = 2;
}


message ContractConstitution {
    CommitteeMembers validator_committee = 1;
    ContractAcceptanceRequirements acceptance_requirements = 2;
    SideChainConsensus consensus = 3;
    CheckpointParameters checkpoint_params = 4;
    ConstitutionChangeRules constitution_change_rules = 5;
}

message ContractAcceptanceRequirements {
    uint64 acceptance_period_expiry = 1;
    uint32 minimum_quorum_required = 2;
}

message CommitteeMembers {
    repeated bytes members = 1;
}

message ContractCheckpoint {
    uint64 checkpoint_number = 1;
    bytes merkle_root = 2;
    CommitteeSignatures signatures = 3;
}

message CheckpointParameters {
    uint64 abandoned_interval = 1;
    uint32 minimum_quorum_required = 2;
    uint64 quarantine_interval = 3;
}

message ConstitutionChangeRules {
    uint32 change_flags = 1;
    RequirementsForConstitutionChange requirements_for_constitution_change = 2;
}

message RequirementsForConstitutionChange {
    // The minimum required constitution committee signatures required for a constitution change proposal to pass.
    uint32 minimum_constitution_committee_signatures = 1;
    // An allowlist of keys that are able to accept and ratify the initial constitution and its amendments. If this is
    // None, the constitution cannot be amended.
    CommitteeMembers constitution_committee = 2;
    // An allowlist of keys that can be used in case of checkpoint abandonment. These keys can quarantine the the constitution
    // and if the quarantine period is exceeded, the backup keys can take over.
    CommitteeMembers backup_keys = 3;
}

enum SideChainConsensus {
    UNSPECIFIED = 0;
    BFT = 1;
    PROOF_OF_WORK = 2;
    MERKLE_ROOT = 3;
}

message ContractUpdateProposal {
    uint64 proposal_id = 1;
    Signature signature = 2;
    ContractConstitution updated_constitution = 3;
}

message ContractUpdateProposalAcceptance {
    uint64 proposal_id = 1;
    bytes validator_node_public_key = 2;
    Signature signature = 3;
}

message ContractAmendment {
    uint64 proposal_id = 1;
    CommitteeMembers validator_committee = 2;
    CommitteeSignatures validator_signatures = 3;
    ContractConstitution updated_constitution = 4;
    uint64 activation_window = 5;
}

message CommitteeSignatures {
    repeated SignerSignature signatures = 1;
}

message SignerSignature {
    bytes signer = 1;
    Signature signature = 2;
}

// TODO: DEPRECATED

message AssetOutputFeatures {
    bytes public_key = 1;
    repeated uint32 template_ids_implemented = 2;
    repeated TemplateParameter template_parameters = 3;
}

message TemplateParameter {
    uint32 template_id = 1;
    uint32 template_data_version = 2;
    bytes template_data = 3;
}

message MintNonFungibleFeatures {
    bytes asset_public_key = 1;
    bytes asset_owner_commitment  = 2;
}

message SideChainCheckpointFeatures {
    bytes merkle_root = 1;
    repeated bytes committee = 2;
}

message CommitteeDefinitionFeatures {
    repeated bytes committee = 1;
    uint64 effective_sidechain_height = 2;
}

message ContractDefinition {
    bytes contract_name = 1;
    bytes contract_issuer = 2;
    ContractSpecification contract_spec = 3;
}

message ContractSpecification {
    bytes runtime = 1;
    repeated PublicFunction public_functions = 2;
}

message PublicFunction {
    bytes name = 1;
    FunctionRef function = 2;
}

message FunctionRef {
    bytes template_id = 1;
    uint32 function_id = 2;
}

message ContractAcceptance {
    bytes validator_node_public_key = 1;
    Signature signature = 2;
}